--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     <!-- Bootstrap script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
-    <title>React App</title>
+    <title>Word Counter</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
